Create devolopment branch

--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head th:fragment="library" >
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
@@ -71,7 +71,7 @@
 </head>
 <body>
 
-<div class="navbar">
+<div class="navbar"  th:fragment="header" >
     <a href="#Ana Sayfa">Ana Sayfa</a>
     <a href="#Haberler">Haberler</a>
 
