--- a/src/main/resources/templates/EkranaYazdırma.html
+++ b/src/main/resources/templates/EkranaYazdırma.html
@@ -1,33 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decoratot="Layout">
-<head>
-    <meta charset="UTF-8">
+<html xmlns:th="http://www.thymeleaf.org" >
+<head  th:replace="Navbar :: library1" >
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <meta charset="UTF-8">
 
     <title>Title</title>
 
-
-</head>
 <body>
 
-<head th:replace="home :: library">
+<div th:replace="Navbar :: navbar"></div>
+<br><br>
 
-
-<div lass="card mb-3" style="max-width: 540px;"   th:each="bar : ${barlar}" >
-    <div class="row g-0">
-        <div class="col-md-4">
-            <img src="..." class="img-fluid rounded-start" alt="...">
-        </div>
-        <div class="col-md-8">
-            <div class="card-body">
-                <h5 class="card-title" th:text="${bar.getBarName} + '---' + ${bar.getBarId}"></h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-            </div>
-        </div>
+<div class="card" style="width: 18rem;"  th:each="bar : ${barlar.content}" >
+    <img class="card-img-top" src="..." alt="Card image cap">
+    <div class="card-body">
+        <h5 class="card-title" th:text="${bar.getBarName} + '---' + ${bar.getBarId}" ></h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    </div>
+    <ul class="list-group list-group-flush">
+        <li class="list-group-item">Cras justo odio</li>
+        <li class="list-group-item">Dapibus ac facilisis in</li>
+        <li class="list-group-item">Vestibulum at eros</li>
+    </ul>
+    <div class="card-body">
+        <a th:href="@{'/detay/' + ${bar.getBarId}}"  class="card-link">Card link</a>
+        <a href="#" class="card-link">Another link</a>
     </div>
 </div>
+<br><br><br><br>
+
+
+
+<nav aria-label="Page navigation example"  >
+    <ul class="pagination">
+        <li class="page-item">
+            <a class="page-link" href="#" aria-label="Previous">
+                <span aria-hidden="true">&laquo;</span>
+                <span class="sr-only">Previous</span>
+            </a>
+        </li>
+        <div th:each="i : ${#numbers.sequence( 1, pago , 1)}" >
+            <li class="page-item"><a class="page-link" th:href="@{'/ekle'(page=${i})}"   th:text="${ i }" >  </a>   </li>
+        </div>
+            <a class="page-link" href="#" aria-label="Next">
+                <span aria-hidden="true">&raquo;</span>
+                <span class="sr-only">Next</span>
+            </a>
+            </li>
+
+
+    </ul>
+</nav>
+
+<div th:each="page : ${paging}" >
+<h1 th:text="${page.getBarId() }"  >   </h1>
+    <h1 th:text="${page.getBarId() }"  >   </h1>
+
+</div>
+
+<div th:each="page : ${pago}" >
+    <h1 th:text="${page}"  >   </h1>
+
+</div>
+
+<div></div>
 
 
 
@@ -37,5 +74,28 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
+</head>
 </html>
