--- a/src/main/resources/templates/Navbar.html
+++ b/src/main/resources/templates/Navbar.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en"  xmlns:th="http://www.thymeleaf.org" >
-<head th:fragment="library1" >
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:fragment="library1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
@@ -51,7 +52,7 @@
             position: absolute;
             background-color: #f9f9f9;
             min-width: 160px;
-            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
             z-index: 1;
         }
 
@@ -75,7 +76,7 @@
 </head>
 <body>
 
-<div class="navbar"  th:fragment="navbar" >
+<div class="navbar" th:fragment="navbar">
     <a href="#Ana Sayfa">Ana Sayfa</a>
     <a href="#Haberler">Haberler</a>
 
@@ -100,13 +101,12 @@
             <a href="#">Festivaller</a>
             <a href="#">Müzeler </a>
         </div>
-        </div>
+    </div>
 
     <a href="#Hakkımızda">Hakkımızda</a>
 
 
 </div>
-
 
 
 </body>
