--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
-<head  th:replace="Navbar2 :: library2"  >
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+>
+<head th:replace="Navbar2 :: library2">
     <meta charset="UTF-8">
     <title>Title</title>
 
@@ -10,31 +11,93 @@
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
-<body style="background-color:#F1F1F1"  >
+<body style="background-color:#F1F1F1">
 
 <style>
-    .paddingTB60 {padding:60px 0px 60px 0px;}
-    .gray-bg {background: #F1F1F1 !important;}
-    .about-title {}
-    .about-title h1 {color: #535353; font-size:45px;font-weight:600;}
-    .about-title span {color: #AF0808; font-size:45px;font-weight:700;}
-    .about-title h3 {color: #535353; font-size:23px;margin-bottom:24px;}
-    .about-title p {color: #7a7a7a;line-height: 1.8;margin: 0 0 15px;}
-    .about-paddingB {padding-bottom: 12px;}
-    .about-img {padding-left: 57px;}
+    .paddingTB60 {
+        padding: 60px 0px 60px 0px;
+    }
+
+    .gray-bg {
+        background: #F1F1F1 !important;
+    }
+
+    .about-title {
+    }
+
+    .about-title h1 {
+        color: #535353;
+        font-size: 45px;
+        font-weight: 600;
+    }
+
+    .about-title span {
+        color: #AF0808;
+        font-size: 45px;
+        font-weight: 700;
+    }
+
+    .about-title h3 {
+        color: #535353;
+        font-size: 23px;
+        margin-bottom: 24px;
+    }
+
+    .about-title p {
+        color: #7a7a7a;
+        line-height: 1.8;
+        margin: 0 0 15px;
+    }
+
+    .about-paddingB {
+        padding-bottom: 12px;
+    }
+
+    .about-img {
+        padding-left: 57px;
+    }
 
     /* Social Icons */
-    .about-icons {margin:48px 0px 48px 0px ;}
-    .about-icons i{margin-right: 10px;padding: 0px; font-size:35px;color:#323232;box-shadow: 0 0 3px rgba(0, 0, 0, .2);}
-    .about-icons li {margin:0px;padding:0;display:inline-block;}
-    #social-fb:hover {color: #3B5998;transition:all .001s;}
-    #social-tw:hover {color: #4099FF;transition:all .001s;}
-    #social-gp:hover {color: #d34836;transition:all .001s;}
-    #social-em:hover {color: #f39c12;transition:all .001s;}
+    .about-icons {
+        margin: 48px 0px 48px 0px;
+    }
+
+    .about-icons i {
+        margin-right: 10px;
+        padding: 0px;
+        font-size: 35px;
+        color: #323232;
+        box-shadow: 0 0 3px rgba(0, 0, 0, .2);
+    }
+
+    .about-icons li {
+        margin: 0px;
+        padding: 0;
+        display: inline-block;
+    }
+
+    #social-fb:hover {
+        color: #3B5998;
+        transition: all .001s;
+    }
+
+    #social-tw:hover {
+        color: #4099FF;
+        transition: all .001s;
+    }
+
+    #social-gp:hover {
+        color: #d34836;
+        transition: all .001s;
+    }
+
+    #social-em:hover {
+        color: #f39c12;
+        transition: all .001s;
+    }
 </style>
 
 <div th:replace="Navbar2 :: navbar2"></div>
-
 
 
 <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
@@ -45,18 +108,26 @@
                 <div class="about-title clearfix">
                     <h1>Hakkımızda <span>İstanbul Activity </span></h1>
                     <h3>İstanbul Activity Nedir </h3>
-                    <p class="about-paddingB"> İstanbul Activity istanbuldaki aktiviteleri ve etkinlikleri listelediğimiz insanların dışarı çıkarken kararsız kalmaktan kurtaran mekanları inceleyecebilecekleri bir platformdur. </p>
-                    <p> Hemen şimdii kaydolun ve mekanları puanlayın eğer listeletmek istediğiniz mekan var ise kurumsal kayıt sekmesiden kayıt olun ve mekanınız hakkından insanları bilgilendirin.</p>
+                    <p class="about-paddingB"> İstanbul Activity istanbuldaki aktiviteleri ve etkinlikleri
+                        listelediğimiz insanların dışarı çıkarken kararsız kalmaktan kurtaran mekanları
+                        inceleyecebilecekleri bir platformdur. </p>
+                    <p> Hemen şimdii kaydolun ve mekanları puanlayın eğer listeletmek istediğiniz mekan var ise kurumsal
+                        kayıt sekmesiden kayıt olun ve mekanınız hakkından insanları bilgilendirin.</p>
                     <div class="about-icons">
-                        <ul >
-                            <li><a href="https://www.facebook.com/"><i id="social-fb" class="fa fa-facebook-square fa-3x social"></i></a> </li>
-                            <li><a href="https://twitter.com/"><i id="social-tw" class="fa fa-twitter-square fa-3x social"></i></a> </li>
-                            <li> <a href="https://plus.google.com/"><i id="social-gp" class="fa fa-google-plus-square fa-3x social"></i></a> </li>
-                            <li> <a href="mailto:bootsnipp@gmail.com"><i id="social-em" class="fa fa-envelope-square fa-3x social"></i></a> </li>
+                        <ul>
+                            <li><a href="https://www.facebook.com/"><i id="social-fb"
+                                                                       class="fa fa-facebook-square fa-3x social"></i></a>
+                            </li>
+                            <li><a href="https://twitter.com/"><i id="social-tw"
+                                                                  class="fa fa-twitter-square fa-3x social"></i></a>
+                            </li>
+                            <li><a href="https://plus.google.com/"><i id="social-gp"
+                                                                      class="fa fa-google-plus-square fa-3x social"></i></a>
+                            </li>
+                            <li><a href="mailto:bootsnipp@gmail.com"><i id="social-em"
+                                                                        class="fa fa-envelope-square fa-3x social"></i></a>
+                            </li>
                         </ul>
-
-
-
 
 
                     </div>
@@ -70,18 +141,6 @@
         </div>
     </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 </body>
