--- a/src/main/resources/templates/feedback.html
+++ b/src/main/resources/templates/feedback.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<form action="#" method="post" th:action="@{/panel}" th:object="${bar}">
+<form action="#" method="post" th:action="@{/adminpanel}" th:object="${bar}">
     <div class="form-group">
         <label for="formGroupExampleInput"> Bar İd </label>
         <input type="text" th:field="*{barId}" class="form-control" id="formGroupExampleInput"
